--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,8 +1,5 @@
 @import "base/variables";
 
-// foundation
-@import "base/foundation-settings";
-@import "foundation";
-@include foundation-everything;
 
 // Components
+@import "components/JumboTron"
