added Redux Reducers, Actions, and store

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,4 +2,6 @@
 
 
 // Components
-@import "components/JumboTron"
+@import "components/JumboTron";
+@import "components/Navbar";
+@import "components/SignUp";
