complete newJourney component

--- a/app/styles/components/_JumboTron.scss
+++ b/app/styles/components/_JumboTron.scss
@@ -1,6 +1,11 @@
-.jumbotron{
+.JumboTron{
   background-image:url("https://static.pexels.com/photos/12582/photo-1440557958969-404dc361d86f.jpeg");
   background-position: 70% 50%;
-    background-size: cover;
-    background-repeat: no-repeat;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height:300px;
+  padding:15px;
+  padding-left: 30px;
+  
+
 }
