added ActivitySearchBar and stylized

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -5,3 +5,4 @@
 @import "components/JumboTron";
 @import "components/Navbar";
 @import "components/SignUp";
+@import "components/ActivitySearchBar";
