--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -6,3 +6,4 @@
 @import "components/Navbar";
 @import "components/SignUp";
 @import "components/ActivitySearchBar";
+@import "components/ActivitySearchResults";
