added maps and stylized map

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -7,3 +7,4 @@
 @import "components/SignUp";
 @import "components/ActivitySearchBar";
 @import "components/ActivitySearchResults";
+@import "components/GoogleMaps";
