--- a/views/search/searchContent.ejs
+++ b/views/search/searchContent.ejs
@@ -1,4 +1,3 @@
-
 <div class="container">
     <form >
     <div id="search">
@@ -8,8 +7,9 @@
      <!--   <button type="button" id="currentLocation" class="btn btn-default">Submit</button> --->
         <button type="button" id="testbutton" class="btn btn-default">Search</button>
       </form>
-
 <div id="searchPanel">
       <br></br>
     <div id="searchResults"></div>
+</div>
+<div class ="container" id="map"></div>
 </div>
