added components for planner page

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -8,3 +8,4 @@
 @import "components/ActivitySearchBar";
 @import "components/ActivitySearchResults";
 @import "components/GoogleMaps";
+@import "components/Favorites";
