complete savedjourney and favorites features

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,6 +2,7 @@
 
 
 // Components
+@import "components/Main";
 @import "components/JumboTron";
 @import "components/Navbar";
 @import "components/SignUp";
