added daychange features

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,3 +10,4 @@
 @import "components/ActivitySearchResults";
 @import "components/GoogleMaps";
 @import "components/Favorites";
+@import "components/_ToDo"
