--- a/app/styles/components/_ActivitySearchBar.scss
+++ b/app/styles/components/_ActivitySearchBar.scss
@@ -3,7 +3,6 @@
 }
 
 #testbutton{
-  background-color:#8FBC8F;
   border-radius:0px;
   width:90px;
   height:45px;
@@ -11,7 +10,7 @@
   font-weight:bold;
   margin-top:5px;
   margin-left:5px;
-  color:#006600;
+  background-color:$blue;
 }
 
 .searchBox{
@@ -19,15 +18,17 @@
   padding-left:15px;
   margin-left:5px;
   border:none;
-  color:#f2f2f2;
-  background-color:#504C86;
   height:45px;
   width:280px;
   font-size:20px;
+  border-color:$highLightGrey;
+  border-width:1px;
+  border-style:solid;
 }
 
 .Navbar-form{
   max-width:700px;
    width:75%;
    margin: 0 auto;
+
 }
