stylized front pages

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,4 +10,7 @@
 @import "components/ActivitySearchResults";
 @import "components/GoogleMaps";
 @import "components/Favorites";
-@import "components/_ToDo"
+@import "components/ToDo";
+@import "components/HomePage";
+@import "components/NewJourney";
+@import "components/ActivitySearch"
