--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -6,4 +6,5 @@ $red:#FF4136;
 $darkGrey:#8c8c8c;
 $travelGreen:#3D9970;
 $blue:#2980b9;
-$slateGrey:#778899;	
+$slateGrey:#778899;
+$darkGreen:#7E8F7C;
