--- a/app/styles/components/_JumboTron.scss
+++ b/app/styles/components/_JumboTron.scss
@@ -1,10 +1,27 @@
 .JumboTron{
-  background-image:url("https://static.pexels.com/photos/12582/photo-1440557958969-404dc361d86f.jpeg");
   background-position: 70% 50%;
   background-size: cover;
   background-repeat: no-repeat;
-  height:300px;
   padding:15px;
   padding-left: 30px;
-  
+  text-align:center;
+  color:white;
+  margin-top:70px;
 }
+
+
+@media (max-width: 800px) {
+    .JumboTron{
+          margin-top:40px;
+    }
+}
+
+@media (max-width: 480px) {
+    .JumboTron{
+          margin-top:20px;
+    }
+}
+
+.titleText{
+ font-family: Tahoma;
+ }
