--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -13,4 +13,5 @@
 @import "components/ToDo";
 @import "components/HomePage";
 @import "components/NewJourney";
-@import "components/ActivitySearch"
+@import "components/ActivitySearch";
+@import "components/SchedulePanel";
