--- a/app/styles/components/_Navbar.scss
+++ b/app/styles/components/_Navbar.scss
@@ -1,5 +1,6 @@
 .navbar{
   border-radius:0px;
+  opacity:.8;
 }
 
 .navbar-nav {
@@ -9,4 +10,6 @@
 .navbar-text{
   font-size:15px;
   vertical-align:center;
+  margin-top:0px;
+  margin-bottom:0px;
 }
