implement delete favorite feature for non logged-in users

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -15,3 +15,4 @@
 @import "components/NewJourney";
 @import "components/ActivitySearch";
 @import "components/SchedulePanel";
+@import "components/Login";
