--- a/app/styles/components/_NewJourney.scss
+++ b/app/styles/components/_NewJourney.scss
@@ -7,7 +7,7 @@
   color:white;
   font-size:15px;
   margin-top:40px;
-  background-color:#7E8F7C;
+  background-color:$darkGreen;
   opacity:0.95;
   border-radius:3px;
 }
