added to current geolocation coordinates of current device

--- a/app/styles/components/_ActivitySearchResults.scss
+++ b/app/styles/components/_ActivitySearchResults.scss
@@ -58,6 +58,11 @@ h5{
   font-weight:bold;
   opacity:.8;
 }
+.searchErr{
+  color:white;
+  font-weight:bold;
+  opacity:.8;
+}
 .addFavoriteHint{
   margin-top:20px;
   color:white;
