--- a/app/styles/components/_Main.scss
+++ b/app/styles/components/_Main.scss
@@ -1,11 +1,13 @@
 html,body{
-  background-color:#F5F3EE;
+  background-color:#7E8F7C;
+  font-family:serenity,helvetica,helvetica neue,arial,sans-serif;
 }
 
 .btn{
   background-color:$blue;
   color:white;
   border-color:$blue;
+  height:50px;
 }
 
 .main{
