--- a/app/styles/components/_ActivitySearchResults.scss
+++ b/app/styles/components/_ActivitySearchResults.scss
@@ -1,26 +1,37 @@
 #searchPanel{
-   width:50%;
    display: inline-block;
-
+   overflow-y: scroll;
+   height:600px;
+   margin-top:10px;
 }
 
 .glyphicon-heart{
     color:red;
     cursor:pointer;
+    font-size: 20px;
+}
+.glyphicon-heart-empty{
+    color:red;
+    cursor:pointer;
+    font-size: 20px;
 }
 .glyphicon-heart-empty:hover{
     color:red;
     cursor: pointer;
+    font-size: 20px;
+}
+.resultBoxesContainer{
+  padding:5px
 }
 .resultboxes{
   margin-bottom: 20px;
-  width:440px;
   padding: 10px;
   border-color:#e2e2e2;
   border-style:solid;
   border-width:1px;
   border-radius:4px;
   background-color: white;
+  height:150px;
 }
 
 .ResultItem{
@@ -41,16 +52,19 @@ h5{
   font-weight:bold;
   display:inline-block;
 }
+
 #resultReviews{
   color:gray;
   font-size:10px;
   font-style:italic;
 }
+
 .resultLocationImage{
   border-radius:5px;
  float:right;
  margin-top:12px;
 }
+
 .emptySearch{
   margin-top:80px;
   text-align:center;
@@ -58,11 +72,13 @@ h5{
   font-weight:bold;
   opacity:.8;
 }
+
 .searchErr{
   color:white;
   font-weight:bold;
   opacity:.8;
 }
+
 .addFavoriteHint{
   margin-top:20px;
   color:white;
