re-stylized homepage and new Journey

--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $grey: #333333;
 $highLightGrey:#e6e6e6;
-$backgroundColor:#fafafa;
+$backgroundColor:#b6bea8;
 $red:#FF4136;
 $darkGrey:#8c8c8c;
 $travelGreen:#3D9970;
