--- a/app/styles/components/_JumboTron.scss
+++ b/app/styles/components/_JumboTron.scss
@@ -6,18 +6,22 @@
   padding-left: 30px;
   text-align:center;
   color:white;
-  margin-top:70px;
+  margin-top:100px;
 }
 
+.logInError{
+  color:red;
+  display:none;
+}
 
 @media (max-width: 800px) {
     .JumboTron{
-          margin-top:40px;
+          margin-top:50px;
     }
 }
 
 @media (max-width: 480px) {
     .JumboTron{
-          margin-top:20px;
+          margin-top:50px;
     }
 }
