--- a/app/styles/components/_Login.scss
+++ b/app/styles/components/_Login.scss
@@ -39,8 +39,8 @@
 }
 .loginInput{
   border-radius:0px;
-  border:none;
   margin-left:2px;
+  border: 1px solid $highLightGrey;
 }
 
 .navbar-right{
